# ChangeLog for dev-cpp/libmxmlplus
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libmxmlplus/ChangeLog,v 1.2 2006/01/12 07:42:31 swegener Exp $

*libmxmlplus-0.9.2_p20060111 (11 Jan 2006)

  11 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +libmxmlplus-0.9.2_p20060111.ebuild:
  Added mxmlplus snapshot from CVS. Moved from dev-libs/mxmlplus to
  dev-cpp/libmxmlplus.

  21 Sep 2005; Mark Loeser <halcy0n@gentoo.org> metadata.xml:
  Putting under cpp herd, adding Flameeyes as primary maintainer

*mxmlplus-0.9.2 (07 Nov 2004)

  07 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +files/mxmlplus-0.9.2-fixblanks.patch, +mxmlplus-0.9.2.ebuild:
  Initial import. Ebuild submitted by Diego 'Flameeyes' Pettenò
  <dgp85@users.sourceforge.net>; bug #59979.
