@@ -1,1 +1,3 @@
 MD5 d3cb99df6cfee776694739693326114f libmxmlplus-0.9.2_p20060111.tar.gz 344116
+RMD160 99c015f267fd25dee5c6d344ec58c779e9c6c1c1 libmxmlplus-0.9.2_p20060111.tar.gz 344116
+SHA256 d741a70e9307f91889153889423eb99ae41c0290b2c5b5e7e7bfd9684bb683cc libmxmlplus-0.9.2_p20060111.tar.gz 344116
