@@ -1,0 +1,3 @@
+MD5 2ef769fca5d7a34605948d0f8a36aaab libmxmlplus-0.9.2_p20060618.tar.gz 348543
+RMD160 9eb4997ed536b5da8b6772fc36126a6b4e5c6a4d libmxmlplus-0.9.2_p20060618.tar.gz 348543
+SHA256 295d1635b4954a7a0f8c7e04b508e9ba403e22d60dc4813361c3553aec0918fd libmxmlplus-0.9.2_p20060618.tar.gz 348543
