@@ -1,6 +1,12 @@
 # ChangeLog for dev-cpp/libmxmlplus
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libmxmlplus/ChangeLog,v 1.2 2006/01/12 07:42:31 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libmxmlplus/ChangeLog,v 1.3 2006/06/18 01:23:50 flameeyes Exp $
+
+*libmxmlplus-0.9.2_p20060618 (18 Jun 2006)
+
+  18 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
+  +libmxmlplus-0.9.2_p20060618.ebuild:
+  New snapshot that builds with GCC 4.1.
 
 *libmxmlplus-0.9.2_p20060111 (11 Jan 2006)
 
